INIT : project structure

--- a/index.html
+++ b/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>XOLODAIRY NAHIOU</title>
+    <title>XoloNotes</title>
+
+    <link rel="stylesheet" href="./.xolonotes/styles.css">
 </head>
 <body>
-    <h1>UNDER MAINTENENCE RN</h1>
+    <header></header>
+
+
+    
+    <link rel="stylesheet" href="./.xolonotes/components/header/header.css">
+    <script type="module" src="./.xolonotes/script.js"></script>
 </body>
 </html>
