MODIFIED : added a fully responsive header

--- a/card.html
+++ b/card.html
@@ -17,8 +17,8 @@
 <body>
     
 <div class="container">
-    <h1> <img src="./.xolonotes/images/notes.png" alt="notes"> Notes</h1>
-    <button class="btn"> <img src="./.xolonotes/images/edit.png" alt="edit">Create Notes</button>
+    <h1> <img src="./.xolonotes/images/icons/notes.png" alt="notes"> Notes</h1>
+    <button class="btn"> <img src="./.xolonotes/images/icons/edit.png" alt="edit">Create Notes</button>
 
     <div class="notes-container">
         <!-- <p contenteditable="true" class="input-box">
