--- a/index.html
+++ b/index.html
@@ -5,14 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>XoloNotes</title>
 
-    <link rel="stylesheet" href="./src/styles.css">
+
+    
+    <!--layout style-->
+    <link rel="stylesheet" href="./.xolonotes/styles.css">
+
+    <!--components style-->
+    <link rel="stylesheet" href="./.xolonotes/components/card/card.css">
+    <link rel="stylesheet" href="./.xolonotes/components/header/header.css">
 </head>
 <body>
     <header></header>
 
-
     
-    <link rel="stylesheet" href="./src/components/header/header.css">
-    <script type="module" src="./src/script.js"></script>
+    <script type="module" src="./.xolonotes/script.js"></script>
 </body>
 </html>
