--- a/index.html
+++ b/index.html
@@ -7,11 +7,22 @@
     <link rel="icon" type="image/svg+xml" href="./.xolonotes/images/favicon.svg" />
     <title>XoloNotes</title>
 
+    <!--font-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+
     <!--layout style-->
-    <link rel="stylesheet" href="./.xolonotes/styles.css">
+    <link rel="stylesheet" href="./.xolonotes/utility.css">
+    <link rel="stylesheet" href="./.xolonotes/fonts.css">
+    <link rel="stylesheet" href="./.xolonotes/common.css">
+
+    <!--template style-->
+    <link rel="stylesheet" href="./.xolonotes/templates/main/main.css">
 
     <!--components style-->
-    <link rel="stylesheet" href="./.xolonotes/components/card/card.css">
+    <!-- <link rel="stylesheet" href="./.xolonotes/components/card/card.css"> -->
     <link rel="stylesheet" href="./.xolonotes/components/header/header.css">
 </head>
 <body>
