MODIFIED : added a button template

--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     <!--components style-->
     <!-- <link rel="stylesheet" href="./.xolonotes/components/card/card.css"> -->
     <link rel="stylesheet" href="./.xolonotes/components/header/header.css">
+    <link rel="stylesheet" href="./.xolonotes/components/button/button.css">
 </head>
 <body>
     <header></header>
 
     <main></main>
 
-    
     <script type="module" src="./.xolonotes/script.js"></script>
 </body>
 </html>
