MODIFIED : modal component

--- a/journal.html
+++ b/journal.html
@@ -34,12 +34,10 @@
         <button class="btn"> <img src="./.xolonotes/images/icons/edit.png" alt="edit">Create Notes</button>
     
         <div class="container-wrapper centered-x">
-            <div class="notes-container-wrapper"></div>
+            <p class="input-box" contenteditable="true"></p>
         </div>
     </div>
 
-
-    <img src="./.xolonotes/images/background-desktop.png" alt="boat background" id="background">
 
     <script type="module" src="./.xolonotes/script.js"></script>
     <script src="./.xolonotes/templates/journal/journal.js"></script>
