--- a/journal.html
+++ b/journal.html
@@ -24,15 +24,13 @@
     <modal class=""></modal>
 
     <div class="container">
-        <h1> <img src="./.xolonotes/images/icons/notes.png" alt="notes"> Notes</h1>
-    
         <div class="container-wrapper centered-x">
-            <div class="notes-container-wrapper">
-                <div class="entry-card centered-x centered-y">
-                    <button class="btn" id="create-button"> 
+            <div class="notes-container-wrapper spacing-top-most">
+                <card class="centered-x centered-y">
+                    <button class="btn centered-x centered-y" id="create-button"> 
                         <img src="./.xolonotes/images/icons/plus-icon.svg" alt="">
                     </button>
-                </div>
+                </card>
             </div>
             <notes></notes>
         </div>
