MODIFIED : finished everything but the styling of the journal page

--- a/journal.html
+++ b/journal.html
@@ -21,11 +21,11 @@
 <body>
     <header></header>
 
-    <modal class=""></modal>
+    <modal class="hidden"></modal>
 
-    <div class="container">
-        <div class="container-wrapper centered-x">
-            <div class="notes-container-wrapper spacing-top-most">
+    <div class="container no-scrolling screen-size">
+        <div class="container-wrapper centered-x no-scrolling">
+            <div class="notes-container-wrapper spacing-top-most enable-scroll">
                 <card class="centered-x centered-y">
                     <button class="btn centered-x centered-y" id="create-button"> 
                         <img src="./.xolonotes/images/icons/plus-icon.svg" alt="">
