--- a/index.html
+++ b/index.html
@@ -25,12 +25,34 @@
     <!-- <link rel="stylesheet" href="./.xolonotes/components/card/card.css"> -->
     <link rel="stylesheet" href="./.xolonotes/components/header/header.css">
     <link rel="stylesheet" href="./.xolonotes/components/button/button.css">
+
+    <!-- experimental -->
+    <link rel="stylesheet" href="./temporary.css">
 </head>
 <body>
     <header></header>
 
     <main class="centered-x"></main>
    
+    <section class="centered-x section-space">
+        <div class="button-group-container centered-x screen-fit">
+            <div class="button-group centered-x even-out">
+                <a class="btn" href="./journal.html">
+                    <img src="/.xolonotes/images/icons/notebook-black.svg" alt="">
+                </a>
+                <button class="btn">
+                    <img src="/.xolonotes/images/icons/calendar-black.svg" alt="">
+                </button>
+                <button class="btn">
+                    <img src="/.xolonotes/images/icons/person-black.svg" alt="">
+                </button>
+            </div>
+        </div>
+    </section>
+
+
+
+
     <script type="module" src="./.xolonotes/script.js"></script>
 </body>
 </html>
