--- a/journal.html
+++ b/journal.html
@@ -21,9 +21,19 @@
 
     <modal class="hidden"></modal>
 
-    <div class="container no-scrolling screen-size">
+    <section class="container spacing-top-most">
+        <div class="button-group-container" id="home-container">
+            <div class="button-group centered-x">
+                <a class="btn" href="./index.html">
+                    <img src="/.xolonotes/images/icons/home-black.svg" alt="">
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <div class="container no-scrolling screen-size section-space">
         <div class="container-wrapper centered-x no-scrolling">
-            <div class="notes-container-wrapper spacing-top-most enable-scroll">
+            <div class="notes-container-wrapper enable-scroll">
                 <card class="centered-x centered-y">
                     <button class="btn centered-x centered-y" id="create-button"> 
                         <img src="./.xolonotes/images/icons/plus-icon.svg" alt="">
