--- a/journal.html
+++ b/journal.html
@@ -31,10 +31,10 @@
         </div>
     </section>
 
-    <div class="container no-scrolling screen-size section-space">
+    <div class="container no-scrolling section-space">
         <div class="container-wrapper centered-x no-scrolling">
             <div class="notes-container-wrapper enable-scroll">
-                <card class="centered-x centered-y">
+                <card class="centered-x centered-y" id="create-card">
                     <button class="btn centered-x centered-y" id="create-button"> 
                         <img src="./.xolonotes/images/icons/plus-icon.svg" alt="">
                     </button>
