fix : responsiveness issues 2

--- a/index.html
+++ b/index.html
@@ -12,22 +12,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:ital,wght@0,300;0,400;0,500;1,300;1,400;1,500&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-
-    <!--layout style-->
-    <link rel="stylesheet" href="./.xolonotes/utility.css">
-    <link rel="stylesheet" href="./.xolonotes/fonts.css">
-    <link rel="stylesheet" href="./.xolonotes/common.css">
-
     <!--template style-->
     <link rel="stylesheet" href="./.xolonotes/templates/main/main.css">
 
-    <!--components style-->
-    <!-- <link rel="stylesheet" href="./.xolonotes/components/card/card.css"> -->
-    <link rel="stylesheet" href="./.xolonotes/components/header/header.css">
-    <link rel="stylesheet" href="./.xolonotes/components/button/button.css">
-
-    <!-- experimental -->
-    <link rel="stylesheet" href="./temporary.css">
 </head>
 <body>
     <header></header>
@@ -40,10 +27,10 @@
                 <a class="btn" href="./journal.html">
                     <img src="/.xolonotes/images/icons/notebook-black.svg" alt="">
                 </a>
-                <button class="btn">
+                <button class="btn static">
                     <img src="/.xolonotes/images/icons/calendar-black.svg" alt="">
                 </button>
-                <button class="btn">
+                <button class="btn static">
                     <img src="/.xolonotes/images/icons/person-black.svg" alt="">
                 </button>
             </div>
