--- a/index.html
+++ b/index.html
@@ -24,21 +24,7 @@
 
     <main class="centered-x"></main>
    
-    <section class="centered-x section-space">
-        <div class="button-group-container centered-x screen-fit">
-            <div class="button-group centered-x even-out">
-                <a class="btn" href="./journal.html">
-                    <img src="/.xolonotes/images/icons/notebook-black.svg" alt="">
-                </a>
-                <button class="btn static">
-                    <img src="/.xolonotes/images/icons/calendar-black.svg" alt="">
-                </button>
-                <button class="btn static">
-                    <img src="/.xolonotes/images/icons/person-black.svg" alt="">
-                </button>
-            </div>
-        </div>
-    </section>
+    <sub-main class="centered-x"></sub-main>
 
 
 
